--- a/hello.html
+++ b/hello.html
@@ -19,7 +19,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <h1> Welcome to my website!!!</h1>
-    Hello World.
+    Hi ! Hello World.
     <h3> CS50GitPractice </h3>
 
     <script src="" async defer></script>
