--- a/hello.html
+++ b/hello.html
@@ -12,6 +12,11 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="">
+    <style>
+        h1 {
+            color: blue;
+        }
+    </style>
 </head>
 
 <body>
