--- a/hello.html
+++ b/hello.html
@@ -18,7 +18,7 @@
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <h1> Welcome to my website!!!</h1>
+    <h1 style="color: chartreuse;"> Welcome to my website!</h1>
     <h2> Hi ! Hello World. </h2>
     <h3> CS50GitPractice </h3>
 
